--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,3 +1,12 @@
 .button {
     -fx-font-weight: bold;
+    
+}
+
+#VboxOrario {
+   -fx-background-color: LightSkyBlue;
+}
+
+#VboxCodici {
+   -fx-background-color: tomato;
 }
