--- a/src/main/resources/fxml/Scene2.fxml
+++ b/src/main/resources/fxml/Scene2.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.CodiciLocaliController">
+<BorderPane fx:id="BorderPaneScena2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.camminoAutobus.CodiciLocaliController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="scena2" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
@@ -21,7 +21,7 @@
                   <ComboBox fx:id="cmbPartenza" prefWidth="150.0" promptText="Via di partenza" />
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="100.0" prefWidth="200.0" stylesheets="@../styles/Styles.css">
                <children>
                   <Label text="SCEGLI LA VIA DI ARRIVO" />
                   <TextField fx:id="txtArrivo" promptText="inserisci parola chiave" />
@@ -37,6 +37,6 @@
       <Label text="CERCA CODICI LOCALI" BorderPane.alignment="CENTER" />
    </top>
    <bottom>
-      <TextArea fx:id="txtResult" editable="false" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="txtResult" editable="false" prefHeight="127.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
