--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -101,6 +101,11 @@
       </VBox>
    </center>
    <bottom>
-      <TextArea fx:id="txtResult" editable="false" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextArea fx:id="txtResult" editable="false" prefHeight="200.0" prefWidth="200.0" />
+            <Button fx:id="btnSalva" mnemonicParsing="false" onAction="#doSalva" text="SALVA" />
+         </children>
+      </VBox>
    </bottom>
 </BorderPane>
