--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -90,8 +89,6 @@
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="btnPercorso" mnemonicParsing="false" onAction="#doCalcolaPercorso" text="CALCOLA PERCORSO" />
-                        <Label text="BARRA DI PROGRESSIONE" />
-                        <ProgressBar fx:id="progressBar" prefHeight="22.0" prefWidth="200.0" progress="0.0" />
                         <Button fx:id="btnDettagli" mnemonicParsing="false" onAction="#doDettagliPercorso" text="DETTAGLI PERCORSO" />
                      </children>
                   </HBox>
@@ -104,7 +101,14 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <TextArea fx:id="txtResult" editable="false" prefHeight="200.0" prefWidth="200.0" />
-            <Button fx:id="btnSalva" mnemonicParsing="false" onAction="#doSalva" text="SALVA" />
+            <HBox fx:id="HBoxSalva" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="INSERISCI IL NOME DEL FILE:" />
+                  <TextField fx:id="txtSalva" onKeyPressed="#doInvisible" />
+                  <Button fx:id="btnSalva" mnemonicParsing="false" onAction="#doSalva" text="SALVA" />
+                  <Label fx:id="erroreSalva" text="FILE GIA' ESISTENTE NELLA CARTELLA" textFill="RED" visible="false" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </bottom>
